fix: :bug: fix animations, colors, and email sending

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,3 +40,13 @@ a {
     color-scheme: dark;
   }
 }
+
+@keyframes blink-caret {
+  0%,
+  100% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+}
